letencrypt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: openapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "authz-one-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - access.authz.one
      secretName: access-autz-one-certificate
  rules:
    - host: access.authz.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openapi-kong-proxy
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-ingress
  namespace: openapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "authz-one-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sso.authz.one
      secretName: sso-autz-one-certificate
  rules:
    - host: sso.authz.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openapi-ssoweb
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: openapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "authz-one-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - app.authz.one
      secretName: sso-autz-one-certificate
  rules:
    - host: app.authz.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openapi-app-gallery
                port:
                  number: 80
